<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/notifications"
        android:title="@string/notifications"
        />
    <item
        android:id="@+id/menuTaggedReports"
        android:icon="@drawable/taged_reports"
        android:title="@string/tagged_reports"
        />
    <item
        android:id="@+id/menuInbox"
        android:icon="@drawable/inbox"
        android:title="@string/inbox"
        />
    <item
        android:title="@string/others"
        >
        <menu>
            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/settings"
                android:title="@string/settings"
                />
            <item
                android:id="@+id/menuContactus"
                android:icon="@drawable/support"
                android:title="Contact us"
                />
            <item
                android:id="@+id/menuAbout"
                android:icon="@drawable/about"
                android:title="About"
                />
        </menu>



    </item>

</menu>