<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/drawer_layout_main"
    tools:context=".HomePageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:id="@+id/linear_layout_tool_bar"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageView_menu"
                android:src="@drawable/ic_menu"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textTitle"
                android:layout_marginStart="15dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:textSize="18sp"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/layout_navigation_header"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        >


    </com.google.android.material.navigation.NavigationView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="53dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <!-- Missing Person Report-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/layOut_missing_report"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:padding="15dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/layOut_found_report"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/person_missing"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/missing"
                    android:textColor="#555555"
                    android:textSize="20sp"
                    style="bold"
                    android:background="@color/white"
                    />
            </LinearLayout>
            <!-- Found Person Report-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/layOut_found_report"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:padding="15dp"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/person_found"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/found"
                    android:textColor="#555555"
                    android:textSize="20sp"
                    style="bold"
                    android:background="@color/white"
                    />
            </LinearLayout>

            <!-- Feed User Report-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/layOut_feed_report"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:padding="15dp"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layOut_missing_report"


                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/user_feed"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/feeds"
                    android:textColor="#555555"
                    android:textSize="20sp"
                    style="bold"
                    android:background="@color/white"
                    />
            </LinearLayout>

            <!-- User Location Services-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/layOut_location_report"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:padding="15dp"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layOut_found_report"


                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/user_location_home"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/tracking"
                    android:textColor="#555555"
                    android:textSize="20sp"
                    style="bold"
                    android:background="@color/white"
                    />
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:id="@+id/feed_textView"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/text_background"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@id/layOut_location_report"
                app:layout_constraintStart_toStartOf="@id/layOut_missing_report"
                app:layout_constraintTop_toBottomOf="@id/layOut_feed_report"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewMissingReport"
                    android:background="@drawable/white_rectangle_background"
                    android:paddingStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:text="@string/text_feeds"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="#555555"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_feeds"
                    app:layout_constraintBottom_toBottomOf="@id/textViewMissingReport"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textViewMissingReport"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ellipsize="end"
                    android:text="@string/feed_user_text"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="#555555"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/textViewMissingReport"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:id="@+id/Report_textView"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/text_background"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@id/feed_textView"
                app:layout_constraintStart_toStartOf="@id/layOut_missing_report"
                app:layout_constraintTop_toBottomOf="@id/feed_textView"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewUserReport"
                    android:background="@drawable/white_rectangle_background"
                    android:paddingStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:text="@string/report"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="#555555"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_user_report"
                    app:layout_constraintBottom_toBottomOf="@id/textViewUserReport"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textViewUserReport"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ellipsize="end"
                    android:text="@string/user_report"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="#555555"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/textViewUserReport"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.drawerlayout.widget.DrawerLayout>